--- a/frontend/Frontend.ui/PageView/LoginPageView.axaml
+++ b/frontend/Frontend.ui/PageView/LoginPageView.axaml
@@ -4,11 +4,60 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Frontend.ui.PageView.LoginPageView">
-      <Grid>
-        <TextBlock Text="Login Page"
-                   FontSize="24"
+          <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto"
+          Margin="40"
+          HorizontalAlignment="Center"
+          Width="350">
+
+        <!-- Title -->
+        <TextBlock Text="Login"
+                   FontSize="28"
+                   FontWeight="Bold"
                    HorizontalAlignment="Center"
-                   VerticalAlignment="Center"/>
+                   Margin="0 0 0 20"/>
+
+        <!-- Username -->
+        <TextBlock Grid.Row="1"
+                   Text="Username"
+                   FontSize="16"
+                   Margin="0 0 0 5"/>
+
+        <TextBox Grid.Row="2"
+                 x:Name="UsernameBox"
+                 Width="300"
+                 Height="32"
+                 Watermark="Enter your Username"/>
+        <!-- Password -->
+        <TextBlock Grid.Row="3"
+                   Text="Password"
+                   FontSize="16"
+                   Margin="0 0 0 5"/>
+              
+        <TextBox PasswordChar="*"
+                 Watermark="Enter your Password"
+                 Grid.Row="4"
+                 x:Name="PasswordBox"
+                 Width="300"
+                 Height="32"/>
+
+        <!-- Login Button -->
+        <Button Grid.Row="5"
+                x:Name="LoginButton"
+                Content="Login"
+                Width="150"
+                Height="40"
+                HorizontalAlignment="Center"
+                Margin="0 40 0 0"/>
+
+        <Button Grid.Row="6"
+                x:Name="RegisterButton"
+                Content="Register"
+                Width="150"
+                Height="40"
+                HorizontalAlignment="Center"
+                Margin="0 20 0 0"/>
     </Grid>
 
+
 </UserControl>
+
